--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
       <div class="mobile-menu_list-wrapper"><a href="services.html" class="mobile-menu_text">Services</a><a
           href="services.html#pricing" class="mobile-menu_text">Pricing</a><a toggle-menu="" href="index.html#team"
           class="mobile-menu_text">Team</a><a toggle-menu="" href="#faq" class="mobile-menu_text">FAQ</a><a
-          href="          "
-          target="_blank" class="button-mobile is-small is-icon mobile-menu w-inline-block">
+          href="services.html"
+           class="button-mobile is-small is-icon mobile-menu w-inline-block">
           <div class="button-text">Get Started</div>
           <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
               viewBox="0 0 16 16" fill="none">
@@ -321,8 +321,8 @@
                 fill="#FF8255" />
             </svg></div>
         </a><a data-w-id="bdb2b569-4efc-5702-7e3a-b84aa9a5e081"
-          href="   "
-          target="_blank" class="nav-menu-button-3 is-small is-icon w-inline-block">
+          href="trynavigo.html"
+          class="nav-menu-button-3 is-small is-icon w-inline-block">
           <div class="button-text">Get Started</div>
           <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
               viewBox="0 0 16 16" fill="none">
@@ -445,8 +445,8 @@
                   fill="#FF8255" />
               </svg></div>
           </a><a data-w-id="6af31c4a-afca-bc2c-0811-4cc736e8580a"
-            href="    "
-            target="_blank" class="nav-menu-button is-small is-icon w-inline-block">
+            href="trynavigo.html"
+           class="nav-menu-button is-small is-icon w-inline-block">
             <div class="button-text">Get Started</div>
             <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                 viewBox="0 0 16 16" fill="none">
@@ -721,8 +721,8 @@
                     <div data-w-id="c3f8dc7d-1c7b-3144-0f0a-ae93ccef7416"
                       style="opacity:0;-webkit-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                       class="button-group"><a data-w-id="b2b74399-8713-d889-189c-7d7330ee926d"
-                        href="   "
-                        target="_blank" class="button is-small is-icon w-inline-block">
+                        href="trynavigo.html"
+                       class="button is-small is-icon w-inline-block">
                         <div class="button-text">Get Started</div>
                         <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                             height="16" viewBox="0 0 16 16" fill="none">
@@ -815,7 +815,7 @@
           </div>
         </div>
       </section><a data-w-id="8e17537b-61c9-a5b4-c632-0a234f42b6b3"
-        href="    "
+        href="trynavigo.html"
         target="_blank" class="marquee-button w-inline-block">
         <div class="marquee-button_component">
           <div class="marquee-button_inner-wrapper">
@@ -1131,7 +1131,7 @@
             </div>
           </div>
         </div><a data-w-id="8e17537b-61c9-a5b4-c632-0a234f42b6b3"
-          href="    "
+          href="trynavigo.html"
           target="_blank" class="marquee-button w-inline-block">
           <div class="marquee-button_component">
             <div class="marquee-button_inner-wrapper">
@@ -1267,7 +1267,7 @@
                     now! Don't see your question here? Let's schedule a convo.</p>
                   <div class="margin-top margin-medium">
                     <div heading-animation="" class="button-group"><a data-w-id="a691e8b5-0e6f-5370-dc83-f628970819c0"
-                        href="          "
+                        href="trynavigo.html"
                         target="_blank" class="button is-small is-icon w-inline-block">
                         <div class="button-text">Talk to Navigo</div>
                         <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -1377,7 +1377,7 @@
                                 our system presents you with 3-5 potential companions who perfectly match your needs. You can browse their profiles, reviews, and expertise before making your choice. Once connected, 
                                 you can chat directly to plan your experiences together. Unlike conventional tour guides, our companions are carefully chosen for compatibility with your specific
                                  travel style and interests, creating more authentic and personalized experiences.</p><a data-w-id="3b7a3558-364c-1426-a931-d322f5d9b38b"
-                                href="    "
+                                href="trynavigo.html"
                                 target="_blank" class="button is-small is-icon faq w-inline-block">
                                 <div class="button-text">Let&#x27;s Book It</div>
                                 <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg"
@@ -1503,7 +1503,7 @@
                 </p>
                 <div class="margin-top margin-medium">
                   <div class="button-group"><a data-w-id="10c9c975-7307-ed65-eb63-79d31aeacdea"
-                      href="    "
+                      href="trynavigo.html"
                       target="_blank" class="button is-small is-icon w-inline-block">
                       <div class="button-text">Get Started for Free</div>
                       <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -1554,7 +1554,7 @@
                     class="w-layout-grid footer_link-list">
                     <div id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac0829a-7ac08291" class="footer_button-wrapper"><a
                         data-w-id="66f6f6b5-998e-38f5-2547-09c07ac0829b"
-                        href="    "
+                        href="trynavigo.html"
                         target="_blank" class="nav-menu-button is-small is-icon footer w-inline-block">
                         <div class="button-text">Get Started</div>
                         <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -1563,7 +1563,7 @@
                               d="M11.558 7.1487H0V8.8513H11.558C11.4606 8.93993 11.3619 9.03241 11.2623 9.12877C9.95239 10.3955 8.4607 12.355 7.79714 15.0937L9.42724 15.5C9.99358 13.1626 11.2699 11.4738 12.4206 10.3611C12.9951 9.80552 13.5328 9.39906 13.9235 9.13346C14.1185 9.00088 14.2759 8.90404 14.3817 8.84185C14.4346 8.81077 14.4744 8.7884 14.4995 8.7746C14.5121 8.7677 14.5209 8.76295 14.5259 8.76032L14.5292 8.75855L14.5296 8.75832L14.5301 8.75807L14.5302 8.75801L14.5303 8.75799L16 8L14.5303 7.24201L14.5302 7.24198L14.5301 7.24192L14.5296 7.24167L14.5292 7.24144L14.5259 7.23967C14.5209 7.23705 14.5121 7.2323 14.4995 7.2254C14.4744 7.2116 14.4346 7.18923 14.3817 7.15815C14.2759 7.09596 14.1185 6.99912 13.9235 6.86654C13.5328 6.60094 12.9951 6.19448 12.4206 5.63895C11.2699 4.52623 9.99358 2.83739 9.42724 0.5L7.79714 0.90634C8.4607 3.64497 9.95239 5.60454 11.2623 6.87123C11.3619 6.96759 11.4606 7.06007 11.558 7.1487Z"
                     fill="#FF8255" />
                 </svg></div>
-                      </a><a href="   " target="_blank"
+                      </a><a href="trynavigo.html" target="_blank"
                         class="button is-small is-icon login-button footer w-inline-block">
                         <div class="icon-embed-xsmall footer w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                             height="24" viewBox="0 0 24 24" fill="none">
@@ -1575,7 +1575,7 @@
                               fill="#ffffff" />
                           </svg></div>
                         
-                      </a><a href="#" class="button is-small is-icon mobile-menu w-inline-block">
+                      </a><a href="trynavigo.html" class="button is-small is-icon mobile-menu w-inline-block">
                         <div class="button-text">get started</div>
                         <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                             height="16" viewBox="0 0 16 16" fill="none">
@@ -1630,7 +1630,7 @@
                       id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac082c5-7ac08291" href="privacy-policy.html"
                       class="footer_legal-link">Privacy Policy</a><a
                       id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac082c7-7ac08291" href="terms-of-service.html"
-                      class="footer_legal-link">Terms of Service</a><a href="          ">
+                      class="footer_legal-link">Terms of Service</a><a href="         ">
                      
                   <div class="footer_credit-text">© <span id="year" class="current-year">CURRENT YEAR</span><span
                       class="current-year"> </span>NAVIGO. All rights reserved.</div>
