--- a/services.html
+++ b/services.html
@@ -579,7 +579,7 @@
       <div class="padding-global">
         <div class="container-large">
           <div class="padding-section-large hero-padding">
-            <div class="w-layout-grid hero_component">
+            <!-- <div class="w-layout-grid hero_component">
               <div id="w-node-c3f8dc7d-1c7b-3144-0f0a-ae93ccef740f-3b306ed2" class="hero_content">
                 <div class="margin-bottom margin-small">
                   <h1 data-w-id="c3f8dc7d-1c7b-3144-0f0a-ae93ccef7411" style="opacity:0;-webkit-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="heading-style-h1 clamp">Discover India Through Local Eyes</h1>
@@ -597,7 +597,7 @@
               <div class="hero_image-wrapper">
                 <img class="hero-image-combined" src="https://images.unsplash.com/photo-1524492412937-b28074a5d7da?q=80&w=1200&auto=format&fit=crop" width="820" alt="Local Indian guide showing historical site to tourist" style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" sizes="(max-width: 991px) 100vw, 820px" data-w-id="24a30a65-1f93-6246-4c56-395d0a4f1961" loading="eager" />
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
