--- a/trynavigo.html
+++ b/trynavigo.html
@@ -63,7 +63,7 @@
                 d="M11.558 7.1487H0V8.8513H11.558C11.4606 8.93993 11.3619 9.03241 11.2623 9.12877C9.95239 10.3955 8.4607 12.355 7.79714 15.0937L9.42724 15.5C9.99358 13.1626 11.2699 11.4738 12.4206 10.3611C12.9951 9.80552 13.5328 9.39906 13.9235 9.13346C14.1185 9.00088 14.2759 8.90404 14.3817 8.84185C14.4346 8.81077 14.4744 8.7884 14.4995 8.7746C14.5121 8.7677 14.5209 8.76295 14.5259 8.76032L14.5292 8.75855L14.5296 8.75832L14.5301 8.75807L14.5302 8.75801L14.5303 8.75799L16 8L14.5303 7.24201L14.5302 7.24198L14.5301 7.24192L14.5296 7.24167L14.5292 7.24144L14.5259 7.23967C14.5209 7.23705 14.5121 7.2323 14.4995 7.2254C14.4744 7.2116 14.4346 7.18923 14.3817 7.15815C14.2759 7.09596 14.1185 6.99912 13.9235 6.86654C13.5328 6.60094 12.9951 6.19448 12.4206 5.63895C11.2699 4.52623 9.99358 2.83739 9.42724 0.5L7.79714 0.90634C8.4607 3.64497 9.95239 5.60454 11.2623 6.87123C11.3619 6.96759 11.4606 7.06007 11.558 7.1487Z"
                 fill="#FF8255" />
             </svg></div>
-        </a><a href="#" target="_blank"
+        </a><a href="trynavigo.html" 
           class="button-mobile is-small is-icon login-button w-inline-block">
           <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
               viewBox="0 0 24 24" fill="none">
@@ -451,6 +451,11 @@ a,
           margin-right: 0.5rem;
           color: #41051E;
         }
+
+        .padding-section-xlarge {
+         padding-top: 10rem;
+           padding-bottom: 10rem;
+          }
         
         /* Success message */
         .success-message {
@@ -548,7 +553,7 @@ a,
       </style>
     </div>
     <main class="main-wrapper max-width-full">
-      <header class="section_hero">
+      <!-- <header class="section_hero">
         <img src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670d5b57a1011258aee2d04_Texture-Subtle-web.webp"
           loading="eager" sizes="(max-width: 816px) 100vw, 816px"
           srcset="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670d5b57a1011258aee2d04_Texture-Subtle-web-p-500.webp 500w, https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670d5b57a1011258aee2d04_Texture-Subtle-web.webp 816w"
@@ -557,9 +562,9 @@ a,
           loading="eager" style="opacity:0" data-w-id="af76a889-3f2a-3dd7-422e-b6c1db57d1d7" alt=""
           class="hero-coil-arrow" />
         <div class="padding-global">
-          <div class="container-large">
-            <div class="padding-section-large hero-padding">
-              <div class="w-layout-grid hero_component">
+          <div class="container-large"> -->
+            <!-- <div class="padding-section-large hero-padding"> -->
+              <!-- <div class="w-layout-grid hero_component">
                 <div id="w-node-c3f8dc7d-1c7b-3144-0f0a-ae93ccef740f-3b306ed1" class="hero_content">
                   <div class="margin-bottom margin-small">
                     <h1 data-w-id="c3f8dc7d-1c7b-3144-0f0a-ae93ccef7411"
@@ -584,7 +589,7 @@ a,
                       </a></div>
                   </div>
                 </div>
-                <div class="hero_image-wrapper"><img class="hero-image-combined"
+                 <div class="hero_image-wrapper"><img class="hero-image-combined"
                     src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/66841b07e24f5c859fe44d6b_hero-image-combination.webp"
                     width="820"
                     alt="Two tourists with local companions exploring India's cultural sites"
@@ -592,18 +597,18 @@ a,
                     sizes="(max-width: 991px) 100vw, 820px" data-w-id="24a30a65-1f93-6246-4c56-395d0a4f1961"
                     loading="eager"
                     srcset="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/66841b07e24f5c859fe44d6b_hero-image-combination-p-500.webp 500w, https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/66841b07e24f5c859fe44d6b_hero-image-combination-p-800.webp 800w, https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/66841b07e24f5c859fe44d6b_hero-image-combination-p-1080.webp 1080w, https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/66841b07e24f5c859fe44d6b_hero-image-combination.webp 1539w" />
-                </div>
-              </div>
-            </div>
+                </div> --> 
+              <!-- </div> -->
+            <!-- </div>
           </div>
         </div>
-      </header>
+      </header> -->
 
       <section class="section_benefits">
         <div class="padding-global">
           <div class="container-large">
             <!-- Contact Form Section -->
-            <div id="contact-form" class="padding-section-medium">
+            <div id="contact-form" class="padding-section-xlarge">
               <div class="contact-form-wrapper">
                 <div class="contact-form-header">
                   <div class="contact-form-header-icon">
