--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
         </div>
       </section><a data-w-id="8e17537b-61c9-a5b4-c632-0a234f42b6b3"
         href="trynavigo.html"
-        target="_blank" class="marquee-button w-inline-block">
+         class="marquee-button w-inline-block">
         <div class="marquee-button_component">
           <div class="marquee-button_inner-wrapper">
             <div class="marquee-button_marquee">
@@ -1132,7 +1132,7 @@
           </div>
         </div><a data-w-id="8e17537b-61c9-a5b4-c632-0a234f42b6b3"
           href="trynavigo.html"
-          target="_blank" class="marquee-button w-inline-block">
+           class="marquee-button w-inline-block">
           <div class="marquee-button_component">
             <div class="marquee-button_inner-wrapper">
             <div class="marquee-button_marquee">
@@ -1267,8 +1267,8 @@
                     now! Don't see your question here? Let's schedule a convo.</p>
                   <div class="margin-top margin-medium">
                     <div heading-animation="" class="button-group"><a data-w-id="a691e8b5-0e6f-5370-dc83-f628970819c0"
-                        href="trynavigo.html"
-                        target="_blank" class="button is-small is-icon w-inline-block">
+                        href="contactus.html"
+                        class="button is-small is-icon w-inline-block">
                         <div class="button-text">Talk to Navigo</div>
                         <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                             height="16" viewBox="0 0 16 16" fill="none">
@@ -1378,7 +1378,7 @@
                                 you can chat directly to plan your experiences together. Unlike conventional tour guides, our companions are carefully chosen for compatibility with your specific
                                  travel style and interests, creating more authentic and personalized experiences.</p><a data-w-id="3b7a3558-364c-1426-a931-d322f5d9b38b"
                                 href="trynavigo.html"
-                                target="_blank" class="button is-small is-icon faq w-inline-block">
+                                 class="button is-small is-icon faq w-inline-block">
                                 <div class="button-text">Let&#x27;s Book It</div>
                                 <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg"
                                     width="16" height="16" viewBox="0 0 16 16" fill="none">
@@ -1504,7 +1504,7 @@
                 <div class="margin-top margin-medium">
                   <div class="button-group"><a data-w-id="10c9c975-7307-ed65-eb63-79d31aeacdea"
                       href="trynavigo.html"
-                      target="_blank" class="button is-small is-icon w-inline-block">
+                       class="button is-small is-icon w-inline-block">
                       <div class="button-text">Get Started for Free</div>
                       <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                           height="16" viewBox="0 0 16 16" fill="none">
@@ -1555,7 +1555,7 @@
                     <div id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac0829a-7ac08291" class="footer_button-wrapper"><a
                         data-w-id="66f6f6b5-998e-38f5-2547-09c07ac0829b"
                         href="trynavigo.html"
-                        target="_blank" class="nav-menu-button is-small is-icon footer w-inline-block">
+                        class="nav-menu-button is-small is-icon footer w-inline-block">
                         <div class="button-text">Get Started</div>
                         <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                             height="16" viewBox="0 0 16 16" fill="none">
