--- a/index.html
+++ b/index.html
@@ -309,8 +309,10 @@
         alt="icon and text that says &quot;rotate your device&quot;" class="rotate-icon" /></div>
     <div class="mobile-menu-wrapper">
       <div class="mobile-menu_list-wrapper"><a href="services.html" class="mobile-menu_text">Services</a><a
-          href="services.html#pricing" class="mobile-menu_text">Pricing</a><a toggle-menu="" href="index.html#team"
-          class="mobile-menu_text">Team</a><a toggle-menu="" href="#faq" class="mobile-menu_text">FAQ</a><a
+          href="services.html#pricing" class="mobile-menu_text">Pricing</a>
+          <!-- <a toggle-menu="" href="index.html#team"
+          class="mobile-menu_text">Team</a> -->
+          <a toggle-menu="" href="#faq" class="mobile-menu_text">FAQ</a><a
           href="services.html"
            class="button-mobile is-small is-icon mobile-menu w-inline-block">
           <div class="button-text">Get Started</div>
@@ -413,10 +415,10 @@
                 src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670faee411fae94c5d22df1_squiggle.svg"
                 loading="lazy" id="w-node-f40bc2e7-3ae4-3966-f550-e274b677aaf5-3b306ed1" alt="" class="squiggle" />
             </div>
-            <div class="menu-link-item-wrapper"><a href="#team" class="navbar_link w-nav-link">Team</a><img
+            <!-- <div class="menu-link-item-wrapper"><a href="#team" class="navbar_link w-nav-link">Team</a><img
                 src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670faee411fae94c5d22df1_squiggle.svg"
                 loading="lazy" id="w-node-_6b88645a-fd60-dc02-46ee-266d110fb970-3b306ed1" alt="" class="squiggle" />
-            </div>
+            </div> -->
             <div class="menu-link-item-wrapper"><a href="#faq" class="navbar_link w-nav-link">FAQ</a><img
                 src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670faee411fae94c5d22df1_squiggle.svg"
                 loading="lazy" id="w-node-_6295b08f-223c-4dfa-435d-3327f4e9cbdb-3b306ed1" alt="" class="squiggle" />
