--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
       -o-font-smoothing: antialiased;
     }
 
-    .section_process1 {
+    .section_process {
   margin-top: 1rem; /* Adjust this value as needed */
 }
     
@@ -395,8 +395,10 @@
             alt="icon and text that says &quot;rotate your device&quot;" class="rotate-icon" /></div>
         <div class="mobile-menu-wrapper">
           <div class="mobile-menu_list-wrapper"><a href="services.html" class="mobile-menu_text">Services</a><a
-              href="services.html#pricing" class="mobile-menu_text">Pricing</a><a toggle-menu="" href="index.html#team"
-              class="mobile-menu_text">Team</a><a toggle-menu="" href="#faq" class="mobile-menu_text">FAQ</a><a
+              href="services.html#pricing" class="mobile-menu_text">Pricing</a>
+              <!-- <a toggle-menu="" href="index.html#team"
+              class="mobile-menu_text">Team</a> -->
+              <a toggle-menu="" href="#faq" class="mobile-menu_text">FAQ</a><a
               class="button-mobile is-small is-icon mobile-menu w-inline-block">
               <div class="button-text">Get Started</div>
               <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -512,10 +514,10 @@
                     src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670faee411fae94c5d22df1_squiggle.svg"
                     loading="lazy" id="w-node-f40bc2e7-3ae4-3966-f550-e274b677aaf5-3b306ed1" alt="" class="squiggle" />
                 </div>
-                <div class="menu-link-item-wrapper"><a href="#team" class="navbar_link w-nav-link">Team</a><img
+                <!-- <div class="menu-link-item-wrapper"><a href="#team" class="navbar_link w-nav-link">Team</a><img
                     src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670faee411fae94c5d22df1_squiggle.svg"
                     loading="lazy" id="w-node-_6b88645a-fd60-dc02-46ee-266d110fb970-3b306ed1" alt="" class="squiggle" />
-                </div>
+                </div> -->
                 <div class="menu-link-item-wrapper"><a href="#faq" class="navbar_link w-nav-link">FAQ</a><img
                     src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670faee411fae94c5d22df1_squiggle.svg"
                     loading="lazy" id="w-node-_6295b08f-223c-4dfa-435d-3327f4e9cbdb-3b306ed1" alt="" class="squiggle" />
@@ -572,13 +574,13 @@
   
   <main class="main-wrapper max-width-full">
     <!-- Hero Section with Parallax Effect -->
-    <header class="section_hero">
+    <!-- <header class="section_hero">
       <img src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670d5b57a1011258aee2d04_Texture-Subtle-web.webp" loading="eager" sizes="(max-width: 816px) 100vw, 816px" srcset="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670d5b57a1011258aee2d04_Texture-Subtle-web-p-500.webp 500w, https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6670d5b57a1011258aee2d04_Texture-Subtle-web.webp 816w" alt="" class="img-texture top-right" />
       
       <div class="padding-global">
         <div class="container-large">
           <div class="padding-section-large hero-padding">
-            <!-- <div class="w-layout-grid hero_component">
+            <div class="w-layout-grid hero_component">
               <div id="w-node-c3f8dc7d-1c7b-3144-0f0a-ae93ccef740f-3b306ed2" class="hero_content">
                 <div class="margin-bottom margin-small">
                   <h1 data-w-id="c3f8dc7d-1c7b-3144-0f0a-ae93ccef7411" style="opacity:0;-webkit-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 3rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="heading-style-h1 clamp">Discover India Through Local Eyes</h1>
@@ -596,18 +598,18 @@
               <div class="hero_image-wrapper">
                 <img class="hero-image-combined" src="https://images.unsplash.com/photo-1524492412937-b28074a5d7da?q=80&w=1200&auto=format&fit=crop" width="820" alt="Local Indian guide showing historical site to tourist" style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" sizes="(max-width: 991px) 100vw, 820px" data-w-id="24a30a65-1f93-6246-4c56-395d0a4f1961" loading="eager" />
               </div>
-            </div> -->
+            </div> 
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <!-- How It Works Section with Timeline -->
     <section class="section_process" style="margin-top: -200px; position: relative; z-index: 2; background-color: white; padding-top: 3rem;">
       <div class="container-large">
-        <div class="padding-section-large bottom-only">
+        <div class="padding-section-medium bottom-only">
           <div class="process_component">
-            <div class="margin-bottom margin-xxlarge">
+            <div class="margin-bottom margin-large">
               <div class="text-align-center">
                 <div class="lottie_squiggle" data-w-id="1fafd53b-dfea-8d89-97a9-72d08cf0bc03" data-animation-type="lottie" data-src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/667758adec0e02a70b89464b_squiggle-animation.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1.6666666666666667" data-duration="0"></div>
                 <div class="max-width-large">
