--- a/trynavigo.html
+++ b/trynavigo.html
@@ -91,7 +91,7 @@
       class="navbar_component w-nav">
       <div class="navbar_container">
         <a href="index.html" class="navbar_logo-link w-nav-brand">
-          <img src="/images/logo/logo.png" alt="Navigo" width="230" height="46" class="navbar_logo-img" />
+          <img src="images/logo/logo.png" alt="Navigo" width="230" height="46" class="navbar_logo-img" />
         </a>
         <nav role="navigation" class="navbar_menu w-nav-menu">
           <div class="navbar_menu-link-wrapper">
