fixing trynavigo.html for mobile

--- a/index.html
+++ b/index.html
@@ -1581,7 +1581,7 @@
                     src="images/logo/logo.png"
                     alt="Navigo"
                     class="navbar_logo-img"
-                      loading="lazy" width="300" alt="Gliss Wellness Logo" class="logo_light" /></a>
+                      loading="lazy" width="300" alt="Navigo Logo" class="logo_light" /></a>
                   <div id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac08299-7ac08291"
                     class="w-layout-grid footer_link-list">
                     <div id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac0829a-7ac08291" class="footer_button-wrapper"><a
