--- a/trynavigo.html
+++ b/trynavigo.html
@@ -10,7 +10,7 @@
     name="description" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="images/icons/favicon.ico" rel="icon" type="image/png" />
-  <link href="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/css/gliss-wellness.webflow.a2a750cae.css"
+  <link href="styles/navigo.css"
     rel="stylesheet" type="text/css" />
   <script type="text/javascript">
     ! function (o, c) {
