--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
   <meta content="Discover how Navigo's local companions transform your India trip with authentic experiences, language assistance, and cultural immersion in Delhi, Mumbai, Jaipur and beyond." name="description" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="images/icons/favicon.ico" rel="icon" type="image/png" />
-  <link href="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/css/gliss-wellness.webflow.a2a750cae.css" rel="stylesheet" type="text/css" />
+  <link href="styles/navigo.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript">
     !function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
   </script>
